--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,10 +7,16 @@ a {
   color: black;
 }
 
-/* div {
+div {
   border: 1px solid black;
-} */
-/* Header Styles */
+}
+
+nav span {
+  display: inline-block;
+  padding-right: 20px;
+}
+
+/* Header */
 header {
   z-index: 2;
   position: fixed;
@@ -41,7 +47,73 @@ header nav {
   padding: 0 30px;
 }
 
-nav span {
-  display: inline-block;
-  padding-right: 20px;
+/* Main Content */
+.main {
+  display: flex;
+  width: 1260px;
+  position: relative;
+  top: 80px;
+  margin: 0 auto 150px auto;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+  margin-right: 30px;
+}
+
+.column.large {
+  width: 630px;
+}
+
+.column.medium {
+  width: 300px;
+}
+
+.column.small {
+  width: 240px;
+}
+
+.article {
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
+}
+
+/* Images */
+#lead {
+  background-image: url("../images/drinks.png");
+  margin-top: 0;
+}
+
+#lead span {
+  font-size: 40px;
+  text-align: left;
+}
+
+#twilight {
+  background-image: url("../images/twilight.png");
+}
+
+#hipster {
+  background-image: url("../images/hipster.png");
+}
+
+#cat {
+  background-image: url("../images/cat.png");
+}
+
+.image-content {
+  display: flex;
+  height: 300px;
+  margin-top: 15px;
+}
+
+.image-content span {
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  text-align: center;
 }
