--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,6 +7,10 @@ a {
   color: black;
 }
 
+h2 {
+  font-size: 30px;
+  font-weight: bold;
+}
 /* div {
   border: 1px solid black;
 } */
@@ -88,24 +92,31 @@ header nav {
 
 .story {
   width: 300px;
-  font-family: Georgia;
-  font-size: 17px;
-  color: black;
 }
 
 .text-content {
   height: 225px;
 }
 
-.news-bites h3 {
-  text-align: center;
+.news-bites {
   display: flex;
   flex-direction: column;
 }
 
+.news-bites h3 {
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+}
+
 .bite {
-  padding: 10px 20px 10px 10px;
+  display: block;
+  padding: 10px 30px 10px 20px;
   border-bottom: 1px solid black;
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
 }
 
 
@@ -135,6 +146,8 @@ header nav {
 
 .image-content {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   height: 300px;
   margin-top: 15px;
 }
