--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,9 @@
 /* General Styles */
-* {
+body {
   margin: 0;
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
 }
 
 a {
@@ -8,12 +11,13 @@ a {
 }
 
 h2 {
-  font-size: 30px;
+  font-size: 32px;
   font-weight: bold;
+  margin: 0;
 }
- div {
+ /* div {
   border: 1px solid black;
-}
+} */
 
 nav span {
   display: inline-block;
@@ -54,16 +58,14 @@ header nav {
 /* Main Content */
 .main {
   display: flex;
-  width: 1260px;
-  position: relative;
-  top: 80px;
-  margin: 0 auto 150px auto;
+  width: 1232px;
+  padding-top: 116px;
+  margin: 0 auto 78px auto;
 }
 
 .column {
   display: flex;
   flex-direction: column;
-  margin-top: 30px;
   margin-right: 30px;
 }
 
@@ -80,14 +82,13 @@ header nav {
 }
 
 .article {
-  font-family: Georgia;
-  font-size: 17px;
-  color: black;
 }
+
 
 .stories {
   display: flex;
   justify-content: space-between;
+  margin-top: 17px;
 }
 
 .story {
@@ -95,7 +96,7 @@ header nav {
 }
 
 .text-content {
-  height: 225px;
+  height: 250px;
 }
 
 .news-bites {
@@ -107,11 +108,12 @@ header nav {
   text-align: center;
   font-size: 16px;
   font-weight: bold;
+  margin-bottom: 41px;
 }
 
 .bite {
   display: block;
-  padding: 10px 30px 10px 20px;
+  padding: 11px 20px;
   border-bottom: 1px solid black;
   background-color: WhiteSmoke;
   font-family: Verdana;
@@ -130,6 +132,7 @@ header nav {
 #lead span {
   font-size: 40px;
   text-align: left;
+  margin-left: 20px;
 }
 
 #twilight {
