--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -21,7 +21,7 @@ h2 {
 
 nav span {
   display: inline-block;
-  padding-right: 20px;
+  padding: 20px 10px;
 }
 
 /* Header */
@@ -119,6 +119,41 @@ header nav {
   font-family: Verdana;
   font-size: 12px;
   color: DimGray;
+}
+
+/* Footer */
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 325px;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+}
+
+footer nav {
+  display: inline-block;
+}
+
+.title {
+  display: inline-block;
+  border-right: 2px solid white;
+  padding-right: 25px;
+}
+
+.info span {
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+}
+
+.info nav {
+  padding-left: 25px;
 }
 
 
