--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,4 @@
-/* General Styles */
+/* Universal Styles */
 body {
   margin: 0;
   font-family: Georgia;
@@ -15,13 +15,19 @@ h2 {
   font-weight: bold;
   margin: 0;
 }
- /* div {
-  border: 1px solid black;
-} */
 
 nav span {
   display: inline-block;
   padding: 20px 10px;
+}
+
+.flex-row {
+  display: flex;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
 }
 
 /* Header */
@@ -29,7 +35,6 @@ header {
   z-index: 2;
   position: fixed;
   background-color: white;
-  display: flex;
   font-family: "Verdana", sans-serif;
   font-size: 14px;
   font-weight: bold;
@@ -40,7 +45,6 @@ header {
 }
 
 .logo {
-  display: flex;
   align-items: center;
   flex-grow: 1;
   padding-left: 30px;
@@ -57,36 +61,21 @@ header nav {
 
 /* Main Content */
 .main {
-  display: flex;
   width: 1232px;
   padding-top: 116px;
   margin: 0 auto 78px auto;
 }
 
 .column {
-  display: flex;
-  flex-direction: column;
   margin-right: 30px;
 }
 
-.column.large {
+  /* Column One  */
+.large {
   width: 630px;
 }
 
-.column.medium {
-  width: 300px;
-}
-
-.column.small {
-  width: 240px;
-}
-
-.article {
-}
-
-
 .stories {
-  display: flex;
   justify-content: space-between;
   margin-top: 17px;
 }
@@ -99,10 +88,16 @@ header nav {
   height: 250px;
 }
 
-.news-bites {
-  display: flex;
-  flex-direction: column;
+/* Column Two */
+.medium {
+  width: 300px;
 }
+
+/* Column Three */
+.small {
+  width: 240px;
+}
+
 
 .news-bites h3 {
   text-align: center;
@@ -116,15 +111,13 @@ header nav {
   padding: 11px 20px;
   border-bottom: 1px solid black;
   background-color: WhiteSmoke;
-  font-family: Verdana;
+  font-family: "Verdana", sans-serif;
   font-size: 12px;
   color: DimGray;
 }
 
 /* Footer */
 footer {
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -146,7 +139,6 @@ footer nav {
 }
 
 .info span {
-  font-family: Georgia;
   font-size: 16px;
   font-weight: bold;
   color: white;
@@ -183,15 +175,12 @@ footer nav {
 }
 
 .image-content {
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   height: 300px;
   margin-top: 15px;
 }
 
 .image-content span {
-  font-family: Georgia;
   font-weight: bold;
   font-size: 30px;
   color: white;
